# agentic-coding-starter

./: .gitattributes  .gitignore  CLAUDE.md  LOG.md  README.md  kickoff.yaml  pyproject.toml  role-models.yaml  user-blockers.md
.agents/skills/: kickoff  learn  methodology  roles  stamp  starter  teach
.claude/agents/: code-critic.md  phase-coder.md  phase-planner.md  plan-reviewer.md
.claude/skills/kickoff/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/methodology/: SKILL.md
.codex/agents/: code-critic.toml  phase-coder.toml  phase-planner.toml  plan-reviewer.toml
.codex/prompts/: kickoff.md  learn.md  methodology.md  roles.md  stamp.md  starter.md  teach.md
briefs/: BRIEF.md  agentic-bootstrap.md  cross-agent-invocation.md  deterministic-orchestration.md  methodology.md
example/: __init__.py  cli.py
plan/: INDEX.md  phase-1.md
policies/: README.md  acceptance-empirical.md  anonymize-log-references.md  briefs-and-policies.md  briefs.md  cross-harness-parity.md  cross-harness-review.md  four-canonical-agents.md  greenfield-until-released.md  human-in-the-loop.md  log-discipline.md  mechanistic-vs-intelligence.md  phase-ripple.md  phase-status.md  project-isolation.md  repo-relative-paths.md  review-lanes.md  role-models.md  role-timeouts.md  user-actions.md  user-blockers.md  user-demo-protocols.md
project/: .gitignore  README.md
project/tests/: test_cli.py
scripts/: anonymization-denylist.local.example  check-anonymization.sh
tests/: test_kickoff_config.py
user-actions-archived/: blazing-salmon.md  dancing-locust.md
(+4 files in other folders)
